<resources>
    <string name="app_name">NewsWorld</string>
    <string name="signin">signin</string>
    <string name="loginin">LoginIn</string>
    <string name="login_with">Login_with</string>
    <string name="forget_password">Forget Password</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="welcome_to_newsworld">Welcome to NewsWorld</string>
    <string name="newsworld">NewsWorld</string>
    <string name="create_an">Create an</string>
    <string name="account">Account</string>
    <string name="name">Name</string>
    <string name="contact_no">Contact no</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign In</string>
    <string name="signup">SignUp</string>
    <string name="don_t_have_an_account">Don\'t have an account</string>
    <string name="register_now">Register Now</string>
    <string name="logout">Logout</string>
    <string name="newsarticles">NewsArticles</string>
    <string name="readmore">ReadMore</string>
</resources>