<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:elevation="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#F8EEEE">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="30dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sign"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="38dp"
                        android:layout_marginTop="10dp"
                        android:elevation="50dp"
                        android:text="@string/welcome_to_newsworld"
                        android:textColor="#070707"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="35dp"
                        android:layout_marginTop="20dp"
                        android:elevation="50dp"
                        android:text="@string/loginin"
                        android:textColor="#19C5B3"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.132"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:id="@+id/linearLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="20dp"
                        android:orientation="vertical"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView3">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:layout_marginStart="35dp"
                                android:layout_marginTop="0dp"
                                android:text="@string/email_id"
                                android:textColor="#FF4081"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/emailTxt"
                                android:layout_width="match_parent"
                                android:layout_height="56dp"
                                android:layout_marginStart="30dp"
                                android:layout_marginEnd="30dp"
                                android:autoLink="email"
                                android:inputType="textEmailAddress" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentEnd="true"
                                android:layout_marginTop="16dp"
                                android:layout_marginEnd="14dp"
                                android:src="@drawable/ic_baseline_email_24" />
                        </RelativeLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentTop="true"
                                android:layout_marginStart="35dp"
                                android:layout_marginTop="0dp"
                                android:text="@string/password"
                                android:textColor="#FF4081"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/PasswordTxt"
                                android:layout_width="match_parent"
                                android:layout_height="56dp"
                                android:layout_marginStart="30dp"
                                android:layout_marginEnd="30dp"
                                android:inputType="textPassword" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentTop="true"
                                android:layout_alignParentEnd="true"
                                android:layout_marginTop="16dp"
                                android:layout_marginEnd="14dp"
                                android:src="@drawable/ic_baseline_lock_24" />
                        </RelativeLayout>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/forget_password"
                        android:textColor="#D31414"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="13dp"
                        android:text="@string/login_with"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/floatingActionButtonGoogle"
                        app:layout_constraintEnd_toEndOf="parent" />
                    <!--                    <LinearLayout-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="50dp"-->
                    <!--                        android:layout_gravity="center_horizontal"-->
                    <!--                        android:gravity="center_horizontal"-->
                    <!--                        android:orientation="horizontal">-->

                    <!--                        <ImageView-->
                    <!--                            android:id="@+id/floatingActionButtonGoogle"-->
                    <!--                            android:layout_width="60dp"-->
                    <!--                            android:layout_height="match_parent"-->
                    <!--                            android:backgroundTint="@color/white"-->
                    <!--                            android:elevation="40dp"-->
                    <!--                            android:foreground="?android:selectableItemBackground"-->
                    <!--                            android:src="" />-->

                    <!--                        <ImageView-->
                    <!--                            android:id="@+id/floatingActionButton2"-->
                    <!--                            android:layout_width="50dp"-->
                    <!--                            android:layout_height="match_parent"-->
                    <!--                            android:layout_marginStart="50dp"-->
                    <!--                            android:elevation="40dp"-->
                    <!--                            android:foreground="?android:selectableItemBackground"-->
                    <!--                           />-->
                    <!--                    </LinearLayout>-->
                    <RelativeLayout
                        android:id="@+id/relativeLayout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="4dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginEnd="4dp"
                            android:layout_toStartOf="@+id/Register"
                            android:text="@string/don_t_have_an_account"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/Register"
                            app:layout_constraintHorizontal_bias="0.271"
                            app:layout_constraintHorizontal_chainStyle="packed"
                            app:layout_constraintStart_toStartOf="parent" />

                        <TextView
                            android:id="@+id/Register"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="30dp"
                            android:layout_marginEnd="25dp"
                            android:background="?actionBarItemBackground"
                            android:text="@string/register_now"
                            android:textColor="#C31818"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/textView6" />
                    </RelativeLayout>

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="10dp"
                        android:backgroundTint="#FF96E9"
                        android:text="@string/signin"
                        android:textColor="@color/white"
                        android:textColorHint="#64FFDA"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>