<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">



    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AEF8F3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/create_an"
                    android:textColor="#D11DEF"
                    android:textSize="30sp"
                    android:layout_marginTop="15dp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/checkBox"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/account"
                    android:textColor="#CC34E6"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.132"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/checkBox"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="35dp"
                            android:layout_marginTop="0dp"
                            android:text="@string/name"
                            android:textColor="#ED1515"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:inputType="textPersonName"

                            android:maxLines="1"

                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="14dp"
                            android:src="@drawable/ic_baseline_person_24" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="35dp"
                            android:layout_marginTop="0dp"
                            android:text="Email ID"
                            android:textColor="#ED1515"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="14dp"
                            android:src="@drawable/ic_baseline_email_24" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="35dp"
                            android:layout_marginTop="0dp"
                            android:textColor="#ED1515"
                            android:text="@string/contact_no"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/number"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:inputType="phone"
                            android:maxLines="1" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="14dp"
                            android:src="@drawable/ic_baseline_contacts_24" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentTop="true"
                            android:layout_marginStart="35dp"
                            android:layout_marginTop="0dp"
                            android:text="Password"
                            android:textColor="#ED1515"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="56dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:inputType="textPassword"
                            android:maxLines="1" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginTop="16dp"
                            android:layout_marginEnd="14dp"
                            android:src="@drawable/ic_baseline_lock_24" />
                    </RelativeLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <CheckBox
                        android:id="@+id/checkBox"
                        android:layout_width="34dp"
                        android:layout_height="22dp"
                        android:layout_marginStart="50dp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="I Agree"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:text="Terms and Condition"
                        android:textColor="@color/purple_200" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:textStyle="bold"

                        />

                    <TextView

                        android:id="@+id/already"
                       android:background="?actionBarItemBackground"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sign_in"
                        android:textColor="#C31818"
                        android:textSize="18sp"
                        android:layout_marginStart="10dp"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/SignUp"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"

                   android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:enabled="true"
                    android:text="@string/signup"

                    android:backgroundTint="#B388FF"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView2"
                    app:layout_constraintVertical_bias="0.983" />
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>